--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,22 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-atk-1.0=2.36.0=he69c4ee_4
-brotli=1.0.9=h5eb16cf_7
-brotli-bin=1.0.9=h5eb16cf_7
-bzip2=1.0.8=h0d85af4_4
-ca-certificates=2022.6.15=h033912b_0
-cairo=1.16.0=h56d7d38_1012
-certifi=2022.6.15=py310h2ec42d9_0
-cycler=0.11.0=pyhd8ed1ab_0
-cython=0.29.28=py310he9d5cce_0
-expat=2.4.8=h96cf925_0
-font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-font-ttf-inconsolata=3.000=h77eed37_0
-font-ttf-source-code-pro=2.038=h77eed37_0
-font-ttf-ubuntu=0.83=hab24e00_0
-fontconfig=2.14.0=h676cef8_0
-fonts-conda-ecosystem=1=0
-fonts-conda-forge=1=0
-fonttools=4.34.4=py310h6c45266_0
-freetype=2.10.4=h4cff582_1
-fribidi=1.0.10=hbcb3906_0
-gdk-pixbuf=2.42.8=hb161b9c_0
-gettext=0.19.8.1=hd1a6beb_1008
-giflib=5.2.1=hbcb3906_2
-gprof2dot=2019.11.30=py_0
-graphite2=1.3.13=h2e338ed_1001
-graphviz=3.0.0=ha5baa68_2
-gtk2=2.24.33=h7c1209e_2
-gts=0.7.6=hccb3bdf_2
-harfbuzz=5.1.0=h00bb2c2_0
-icu=70.1=h96cf925_0
-jpeg=9e=hac89ed1_2
-kiwisolver=1.4.4=py310habb735a_0
-lcms2=2.12=h577c468_0
-lerc=3.0=he49afe7_0
-libblas=3.9.0=15_osx64_openblas
-libbrotlicommon=1.0.9=h5eb16cf_7
-libbrotlidec=1.0.9=h5eb16cf_7
-libbrotlienc=1.0.9=h5eb16cf_7
-libcblas=3.9.0=15_osx64_openblas
-libcxx=14.0.6=hce7ea42_0
-libdeflate=1.12=hac89ed1_0
-libffi=3.4.2=h0d85af4_5
-libgd=2.3.3=h1e214de_3
-libgfortran=5.0.0=9_3_0_h6c81a4c_23
-libgfortran5=9.3.0=h6c81a4c_23
-libglib=2.72.1=hfbcb929_0
-libiconv=1.16=haf1e3a3_0
-liblapack=3.9.0=15_osx64_openblas
-libopenblas=0.3.20=openmp_hb3cd9ec_0
-libpng=1.6.37=h5a3d3bf_3
-librsvg=2.54.4=h3d48ba6_0
-libtiff=4.4.0=h9847915_1
-libtool=2.4.6=he49afe7_1008
-libwebp=1.2.2=h28dabe5_0
-libwebp-base=1.2.2=h0d85af4_1
-libxcb=1.13=h0d85af4_1004
-libxml2=2.9.14=hea49891_4
-libzlib=1.2.12=hfe4f2af_2
-llvm-openmp=14.0.4=ha654fa7_0
-lz4-c=1.9.3=he49afe7_1
-matplotlib=3.5.2=py310h2ec42d9_0
-matplotlib-base=3.5.2=py310h4510841_0
-munkres=1.1.4=pyh9f0ad1d_0
-mypy=0.961=py310h6c45266_0
-mypy_extensions=0.4.3=py310h2ec42d9_5
-ncurses=6.3=h96cf925_1
-numpy=1.23.1=py310ha3f357c_0
-openjpeg=2.4.0=h6e7aa92_1
-openssl=3.0.5=hb81d4ab_1
-packaging=21.3=pyhd8ed1ab_0
-pango=1.50.9=hc8ec20f_0
-pcre=8.45=he49afe7_0
-pillow=9.2.0=py310hb3240ae_0
-pip=22.1.2=pyhd8ed1ab_0
-pixman=0.40.0=hbcb3906_0
-psutil=5.9.1=py310h6c45266_0
-pthread-stubs=0.4=hc929b4f_1001
-pyparsing=3.0.9=pyhd8ed1ab_0
-python=3.10.5=hdd68b96_0_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python_abi=3.10=2_cp310
-readline=8.1.2=h3899abd_0
-setuptools=63.2.0=py310h2ec42d9_0
-six=1.16.0=pyh6c4a22f_0
-sqlite=3.39.1=hd9f0692_0
-tk=8.6.12=h5dbffcc_0
-tomli=2.0.1=pyhd8ed1ab_0
-tornado=6.2=py310h6c45266_0
-typing_extensions=4.3.0=pyha770c72_0
-tzdata=2022a=h191b570_0
-unicodedata2=14.0.0=py310h1961e1f_1
-wheel=0.37.1=pyhd8ed1ab_0
-xorg-libxau=1.0.9=h35c211d_0
-xorg-libxdmcp=1.1.3=h35c211d_0
-xz=5.2.5=haf1e3a3_1
-zlib=1.2.12=hfe4f2af_2
-zstd=1.5.2=ha9df2e0_2
+certifi==2022.9.24
+cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
+Cython @ file:///opt/concourse/worker/volumes/live/4cfc5d38-d014-4cdf-77c4-4d36f6ab5912/volume/cython_1647850374603/work
+fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1657249419079/work
+gprof2dot @ file:///home/conda/feedstock_root/build_artifacts/gprof2dot_1591809678998/work
+kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1657953145767/work
+matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1651610267679/work
+munkres==1.1.4
+mypy @ file:///Users/runner/miniforge3/conda-bld/mypy_1654559208453/work
+mypy-extensions @ file:///Users/runner/miniforge3/conda-bld/mypy_extensions_1649013384990/work
+numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1657483912461/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
+Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1657007309792/work
+psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1653089316499/work
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1658811241202/work
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
+tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1656938120738/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1656706066251/work
+unicodedata2 @ file:///Users/runner/miniforge3/conda-bld/unicodedata2_1649111966296/work
